--- a/src/app/file-upload-home/child_components/user-upload/user-upload.component.html
+++ b/src/app/file-upload-home/child_components/user-upload/user-upload.component.html
@@ -19,8 +19,8 @@
               </mat-select>
             </mat-form-field>
       
-      
-          <mat-form-field class="col-6">
+            
+          <mat-form-field class="col-6" >
              
               <mat-label>Select Sub-Type</mat-label>
               <mat-select [disabled]="isSubCategoryDataHere">
@@ -85,22 +85,29 @@
               </div>
               <div>
                 <div class="mt-1">
-                  <div class="mobile-searchbar d-flex justify-content-center">
+                  <div class="mobile-searchbar ">
                       <input type="text" placeholder="Search by Program/Course name" [(ngModel)]="searchManger"  (click)="searchManagerFunction()">
                   </div>
-                  <div class="managers_container">
-                    <div class="managersCard">
+                  <div class="selectedManagerList " *ngIf="addedManager.length>0">
+                    <span class="selectedmanager col-6" *ngFor="let manager of addedManager;let i=index">
+                      {{manager.name}}
+                      <button class="btn"  (click)="deletemanger(manager,i)">X</button>
+                    </span>
+                  </div>
+
+                  <div class="managers_containerWeb">
+                    <div class="managersCardWeb"  *ngFor=" let manager of listOfManagers ">
                       <div class="col-2 d-flex justify-content-start align-items-center">
-                        <div class="managerImageContainer">
-    
+                        <div class="managerImageContainer" >
+                          <img src="../../../../assets/images/Orange.png" alt="" height="100%" width="100%">
                         </div>
                       </div>
                       <div class="col-7">
-                        <div class="managerSLable">Name</div>
-                        <div class="managerSLable">Email ID</div>
-                        <div class="managerSLable">Employee ID</div>
+                        <div class="managerSLable">{{manager?.name}}</div>
+                        <div class="managerSLable">{{manager?.emailId}}</div>
+                        <div class="managerSLable">{{manager?.EmployeeId}}</div>
                       </div>
-                      <div class=" col-2 addBtn align-self-start">
+                      <div class=" col-2 addBtnWeb align-self-start" (click)="addManager(manager)">
                         Add +
                       </div>
                     </div>
@@ -218,8 +225,8 @@
                 </div>
           </div>
           <div class="d-flex justify-content-end gap-2 mt-4 mb-2">
-              <button  class="btn btn_save">Save</button>
-              <button  class="btn btn_submit"  (click)="postUploadedData('')"  (mouseover)="openSubmitModal()"  data-bs-toggle="modal" data-bs-target="#submitPopup" >Submit</button>
+              <button  class="btn btn_save" [disabled]="true">Save</button>
+              <button  class="btn btn_submit"  (click)="postUploadedData('')"  (mouseover)="openSubmitModal()"  data-bs-toggle="modal" data-bs-target="#submitPopup"  >Submit</button>
           </div>
           </div>
           
@@ -425,6 +432,7 @@
               
   
           </div>
+          
           <div *ngIf="openSelectManagerCard;then openSelectManagerCardMobile "></div>
           <ng-template #openSelectManagerCardMobile>
             <div class="selectManagerCard">
@@ -467,69 +475,32 @@
               <div>
                 <div class="mt-1">
                   <div class="mobile-searchbar d-flex justify-content-center">
-                      <input type="text" placeholder="Search by Program/Course name" [(ngModel)]="searchManger"  (click)="searchManagerFunction()">
+                      <input type="text" placeholder="Search manager here" [(ngModel)]="searchManger"  (click)="searchManagerFunction()">
                   </div>
-                  <div class="managers_container">
-                    <div class="managersCard">
+                  <div class="selectedManagerList " *ngIf="addedManager.length>0">
+                    <span class="selectedmanager col-6" *ngFor="let manager of addedManager;let i=index">
+                      {{manager.name}}
+                      <button class="btn"  (click)="deletemanger(manager,i)">X</button>
+                    </span>
+                  </div>
+                  <div class="managers_container" >
+                    <div class="managersCard" *ngFor=" let manager of listOfManagers ">
                       <div class="col-3 d-flex justify-content-center align-items-center">
                         <div class="managerImageContainer">
+                          <img src="assets/images/Green.png" alt="" height="100%" width="100%">
 
                         </div>
                       </div>
                       <div class="col-6">
-                        <div class="managerSLable">Name</div>
-                        <div class="managerSLable">Email ID</div>
-                        <div class="managerSLable">Employee ID</div>
+                        <div class="managerSLable">{{manager?.name}}</div>
+                        <div class="managerSLable">{{manager?.emailId}}</div>
+                        <div class="managerSLable">{{manager.EmployeeId}}</div>
                       </div>
-                      <div class=" col-2 addBtn align-self-start">
+                      <div class=" col-2 addBtn align-self-start" (click)="addManager(manager)">
                         Add +
                       </div>
                     </div>
-                    <div class="managersCard">
-                      <div class="col-3 d-flex justify-content-center align-items-center">
-                        <div class="managerImageContainer">
-
-                        </div>
-                      </div>
-                      <div class="col-6">
-                        <div class="managerSLable">Name</div>
-                        <div class="managerSLable">Email ID</div>
-                        <div class="managerSLable">Employee ID</div>
-                      </div>
-                      <div class=" col-2 addBtn align-self-start">
-                        Add +
-                      </div>
-                    </div>
-                    <div class="managersCard">
-                      <div class="col-3 d-flex justify-content-center align-items-center">
-                        <div class="managerImageContainer">
-
-                        </div>
-                      </div>
-                      <div class="col-6">
-                        <div class="managerSLable">Name</div>
-                        <div class="managerSLable">Email ID</div>
-                        <div class="managerSLable">Employee ID</div>
-                      </div>
-                      <div class=" col-2 addBtn align-self-start">
-                        Add +
-                      </div>
-                    </div>
-                    <div class="managersCard">
-                      <div class="col-3 d-flex justify-content-center align-items-center">
-                        <div class="managerImageContainer">
-
-                        </div>
-                      </div>
-                      <div class="col-6">
-                        <div class="managerSLable">Name</div>
-                        <div class="managerSLable">Email ID</div>
-                        <div class="managerSLable">Employee ID</div>
-                      </div>
-                      <div class=" col-2 addBtn align-self-start">
-                        Add +
-                      </div>
-                    </div>
+                   
   
   
   
