--- a/src/app/file-upload-home/child_components/user-upload/user-upload.component.scss
+++ b/src/app/file-upload-home/child_components/user-upload/user-upload.component.scss
@@ -265,6 +265,7 @@ letter-spacing: 1.1px;
     width: 100%;
     overflow-y: auto;
     overflow-x: hidden;
+ 
 }
 .newUploadStatusContainer_mobile{
     height: 73vh;
@@ -439,6 +440,63 @@ letter-spacing: 1.1px;
     background-position: right 0.5rem center;
     background-size: 1.7rem;
 }
+.managers_containerWeb{
+    width: 100%;
+    padding: 2%;
+    height: 300px;
+    overflow-y: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: start;
+
+    // padding: 2%;
+    .managersCardWeb{
+        width: 100%;
+     
+        flex-shrink: 0;
+        border-radius: 4px;
+        border: 1px solid #000;
+        background: #FFF;
+        height: 100px;
+        // padding: 2%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 2%;
+
+    }
+    .managerImageContainer{
+        height: 50px;
+        width: 50px;
+        border: 1px solid #000;
+        border-radius: 100%;
+
+    }
+    .managerSLable{
+        color: #8E8E8E;
+        font-family: 'Lato', sans-serif;
+        font-size: 10px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 24.5px; /* 245% */
+        letter-spacing: 0.6px;
+    }
+    .addBtnWeb{
+        width:80px;
+        height: 20px;
+        padding: 2%;
+        flex-shrink: 0;
+        border-radius: 10px;
+        background: #F21323;
+        color:#fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 2%;
+
+    }
+
+}
 .managers_container{
     width: 100%;
     padding: 2%;
@@ -477,7 +535,7 @@ letter-spacing: 1.1px;
         letter-spacing: 0.6px;
     }
     .addBtn{
-        width: 80px;
+        width:60px;
         height: 20px;
         padding: 2%;
         flex-shrink: 0;
@@ -489,4 +547,35 @@ letter-spacing: 1.1px;
         align-items: center;
 
     }
+    
+}
+.selectedManagerList{
+        width: 95%;
+        flex-shrink: 0;
+        border-radius: 4px;
+        border: 1px solid gray;
+        background: #FFF;
+        min-height: 50px;
+        padding: 2%;
+        display: grid;
+        place-items:center ;
+        gap: 0.5em;
+        grid-template-columns: repeat(2, 1fr);
+        
+        // flex-wrap: wrap;
+
+      
+        margin: 2%;
+
+        .selectedmanager{
+            border-radius: 4px;
+            background: #D9D9D9;
+            min-height: 3vh;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 3%;
+            
+        }
 }
